--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -9,6 +9,11 @@
             <tree string="Loan Request">
                 <field name="name" readonly="1" />
                 <field name="partner_id" />
+                <field name="loan_type_id" />
+                <field name="loan_amount" />
+                <field name="interest_rate" />
+                <field name="amount_due" />
+                <field name="state"/>
             </tree>
         </field>
     </record>
@@ -19,7 +24,44 @@
         <field name="model">loan.request</field>
         <field name="arch" type="xml">
             <form string="Loan Request">
-                <field name="partner_id" />
+                <header>
+                    <button name="action_apply" string="Apply"
+                            type="object" class="btn-primary"
+                            invisible="state not in ['draft']"/>
+                    <button name="action_approve" string="Approve"
+                            type="object" class="btn-primary"
+                            invisible="state not in ['applied']"/>
+                    <button name="action_cancel" string="Cancel"
+                            type="object" class="btn-danger"
+                            invisible="state not in ['applied']"/>
+                    <field name="state" widget="statusbar" 
+                        statusbar_visible="draft,applied,approved,fully_paid,canceled" />
+                </header>
+                <sheet>
+                    <h1>
+                        <field name="partner_id" 
+                            options="{'no_create': True, 'no_edit': True}"
+                            placeholder="Partner" />
+                    </h1>
+                    <br />
+                    <group>
+                        <group>
+                            <field name="loan_amount" 
+                                options="{'no_create': True, 'no_edit': True}" />
+                            <field name="loan_type_id" 
+                                options="{'no_create': True, 'no_edit': True}" />
+                            <field name="interest_rate" />
+                            <field name="amount_due" />
+                            <field name="applied_date" readonly="1" />
+                            <field name="approved_date" readonly="1" />
+                        </group>
+                    </group>
+                </sheet>
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" groups="base.group_user" />
+                    <field name="activity_ids" />
+                    <field name="message_ids" />
+                </div>
             </form>
         </field>
     </record>
