--- a/pyver_inherit_modules/views/res_company_views.xml
+++ b/pyver_inherit_modules/views/res_company_views.xml
@@ -2,7 +2,7 @@
 
 <odoo>
     <record id="inherited_res_company_view_form" model="ir.ui.view">
-        <field name="name">inherited.rest.company.view.form</field>
+        <field name="name">inherited.res.company.view.form</field>
         <field name="model">res.company</field>
         <field name="inherit_id" ref="base.view_company_form"/>
         <field name="arch" type="xml">
