--- a/pyver_inherit_modules/views/res_partner_views.xml
+++ b/pyver_inherit_modules/views/res_partner_views.xml
@@ -2,7 +2,7 @@
 
 <odoo>
     <record id="inherited_res_partner_view_form" model="ir.ui.view">
-        <field name="name">inherited.rest.partner.view.form</field>
+        <field name="name">inherited.res.partner.view.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
