--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -13,7 +13,7 @@
                 <field name="loan_amount" />
                 <field name="interest_rate" />
                 <field name="amount_due" />
-                <field name="state"/>
+                <field name="state" />
             </tree>
         </field>
     </record>
@@ -55,11 +55,13 @@
                                 options="{'no_create': True, 'no_edit': True}" />
                             <field name="interest_rate" />
                             <field name="amount_due" />
+                            <field name="unpaid_interest_2023" />
                         </group>
                         <group>
                             <field name="applied_date" readonly="1" />
                             <field name="approved_date" readonly="1" />
-                            <field name="recurring_next_date" readonly="1" />
+                            <field name="date_of_next_invoice" />
+                            <field name="borrowed_date" />
                         </group>
                     </group>
                 </sheet>
