--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -55,7 +55,6 @@
                                 options="{'no_create': True, 'no_edit': True}" />
                             <field name="interest_rate" />
                             <field name="amount_due" />
-                            <field name="unpaid_interest_2023" />
                         </group>
                         <group>
                             <field name="applied_date" readonly="1" />
@@ -64,6 +63,17 @@
                             <field name="borrowed_date" />
                         </group>
                     </group>
+                    <notebook>
+                        <page string="Other Charges">
+                            <field name="loan_request_ids">
+                                <tree editable="bottom">
+                                    <field name="name" />
+                                    <field name="amount" />
+                                    <field name="state" />
+                                </tree>
+                            </field>
+                        </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" groups="base.group_user" />
