--- a/pyver_farm/views/farm_type_views.xml
+++ b/pyver_farm/views/farm_type_views.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <odoo>
-    <!-- Loan Request Tree View -->
+    <!-- Farm Type Tree View -->
     <record id="farm_type_view_tree" model="ir.ui.view">
         <field name="name">farm.type.view.tree</field>
         <field name="model">farm.type</field>
         <field name="arch" type="xml">
-            <tree string="Farm Type" editable="bottom">
+            <tree string="Types" editable="bottom">
                 <field name="name" />
             </tree>
         </field>
     </record>
 
-    <!-- Loan Request Action -->
+    <!-- Farm Type Action -->
     <record id="farm_type_action" model="ir.actions.act_window">
-        <field name="name">Farm Type</field>
+        <field name="name">Types</field>
         <field name="res_model">farm.type</field>
         <field name="view_mode">tree</field>
     </record>
 
-    <!-- Loan Request Menu Action -->
-    <menuitem id="farm_type_menu_action" name="Farm Type"
+    <!-- Farm Type Menu Action -->
+    <menuitem id="farm_type_menu_action" name="Types"
         parent="configuration_action_menu"
         action="farm_type_action" />
 </odoo>
