--- a/pyver_inherit_modules/views/res_partner_views.xml
+++ b/pyver_inherit_modules/views/res_partner_views.xml
@@ -7,8 +7,7 @@
         <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
             <field name="street" position="attributes">
-                <attribute name="placeholder">Zone</attribute>
-                <attribute name="required">True</attribute>
+                <attribute name="placeholder">Street</attribute>
             </field>
             <xpath expr="//field[@name='street']" position="after">
                 <field name="barangay" placeholder="Barangay" />
@@ -21,16 +20,9 @@
             </xpath>
             <field name="city" position="attributes">
                 <attribute name="placeholder">City/Municipality</attribute>
-                <attribute name="required">True</attribute>
             </field>
             <field name="state_id" position="attributes">
                 <attribute name="invisible">True</attribute>
-            </field>
-            <field name="zip" position="attributes">
-                <attribute name="required">True</attribute>
-            </field>
-            <field name="country_id" position="attributes">
-                <attribute name="required">True</attribute>
             </field>
         </field>
     </record>
