--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -42,6 +42,9 @@
                     <button name="action_reset_to_draft" string="Reset to Draft"
                             type="object" class="btn-primary"
                             invisible="state in ['draft']" />
+                    <button name="action_fully_paid" string="Fully Paid"
+                            type="object" class="btn-success"
+                            invisible="state not in ['approved']" />
                     <field name="state" widget="statusbar" 
                         statusbar_visible="draft,applied,approved,fully_paid,canceled" />
                 </header>
@@ -60,6 +63,7 @@
                                 options="{'no_create': True, 'no_edit': True}" />
                             <field name="interest_rate" />
                             <field name="amount_due" />
+                            <field name="fully_paid_date" />
                         </group>
                         <group>
                             <field name="applied_date" readonly="1" />
