[IMP] pyver_loans: OP#21 - Added an Invoicing Page in Loans module.

--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -73,6 +73,9 @@
                         </group>
                     </group>
                     <notebook>
+                        <page string="Invoicing" invisible="state not in ['approved']">
+                            <field name="borrower_invoice_ids" />
+                        </page>
                         <page string="Other Charges">
                             <field name="loan_request_ids">
                                 <tree editable="bottom">
