--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -50,9 +50,7 @@
                 </header>
                 <sheet>
                     <h1>
-                        <field name="partner_id" 
-                            options="{'no_create': True, 'no_edit': True}"
-                            placeholder="Partner" />
+                        <field name="partner_id" placeholder="Partner" />
                     </h1>
                     <br />
                     <group>
