--- a/pyver_loans/views/loan_type_views.xml
+++ b/pyver_loans/views/loan_type_views.xml
@@ -13,6 +13,24 @@
         </field>
     </record>
 
+    <!-- Form -->
+    <record id="loan_type_view_form" model="ir.ui.view">
+        <field name="name">loan.type.view.form</field>
+        <field name="model">loan.type</field>
+        <field name="arch" type="xml">
+            <form>
+                <group>
+                    <group>
+                        <field name="code" readonly="1" />
+                    </group>
+                    <group>
+                        <field name="name" />
+                    </group>
+                </group>
+            </form>
+        </field>
+    </record>
+
     <!-- Loan Plan Action -->
     <record id="loan_type_action" model="ir.actions.act_window">
         <field name="name">Loan Type</field>
