--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -59,7 +59,7 @@
                             <field name="loan_type_id" />
                             <field name="interest_rate" />
                             <field name="amount_due" />
-                            <field name="fully_paid_date" />
+                            <field name="fully_paid_date" readonly="state != 'fully_paid'" />
                         </group>
                         <group>
                             <field name="applied_date" readonly="1" />
