--- a/pyver_inherit_modules/views/res_partner_views.xml
+++ b/pyver_inherit_modules/views/res_partner_views.xml
@@ -24,6 +24,14 @@
             <field name="state_id" position="attributes">
                 <attribute name="invisible">True</attribute>
             </field>
+
+            <div name="button_box" position="inside">
+                <button type="object" class="oe_stat_button" icon="fa-money" name="action_view_partner_loans" invisible="loan_count == 0">
+                    <div class="o_form_field o_stat_info">
+                        <field name="loan_count" widget="statinfo" />
+                    </div>
+                </button>
+            </div>
         </field>
     </record>
 </odoo>
