[IMP] pyver_loans: GH#23 - Added reports for loans, and added notes page.

--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -81,6 +81,9 @@
                                 </tree>
                             </field>
                         </page>
+                        <page string="Notes">
+                            <field name="notes" placeholder="Enter your notes..." />
+                        </page>
                     </notebook>
                 </sheet>
                 <div class="oe_chatter">
