[IMP] pyver_automation, pyver_loans: GH#30 - Added new payment_structure field and the logic of automatic generation of invoices. Updated email template and the automatic sending of email scheduled action for outstanding balance report and updated the next call for all scheduled actions.

--- a/pyver_loans/report/loan_request_templates.xml
+++ b/pyver_loans/report/loan_request_templates.xml
@@ -19,7 +19,8 @@
               <p class="fw-bold pb-2 mb-0">Amount: <span t-field="o.loan_amount" t-options='{"widget": "float", "precision": 2}' /></p>
               <p class="fw-bold pb-2 mb-0">Type: <span t-field="o.loan_type_id" /></p>
               <p class="fw-bold pb-2 mb-0">Interest Rate (%): <span t-field="o.interest_rate" t-options='{"widget": "float", "precision": 2}' /></p>
-              <p class="fw-bold pb-2">Monthly Due: <span t-field="o.amount_due" t-options='{"widget": "float", "precision": 2}' /></p>
+              <p class="fw-bold pb-2 mb-0">Monthly Due: <span t-field="o.amount_due" t-options='{"widget": "float", "precision": 2}' /></p>
+              <p class="fw-bold pb-2">Payment Structure: <span t-field="o.payment_structure" /></p>
               <t t-if="o.borrower_invoice_ids">
               <h4 class="text-uppercase">Outstanding Invoices</h4>
                 <table class="table table-striped my-3">
