--- a/pyver_loans/views/loan_request_views.xml
+++ b/pyver_loans/views/loan_request_views.xml
@@ -13,6 +13,7 @@
                 <field name="loan_amount" />
                 <field name="interest_rate" />
                 <field name="amount_due" />
+                <field name="payment_structure" />
                 <field name="state" />
                 <field name="borrowed_date" />
                 <field name="date_of_next_invoice" />
@@ -38,7 +39,7 @@
                             invisible="state not in ['applied']" />
                     <button name="action_generate_invoice" string="Generate Invoice"
                             type="object" class="btn-primary"
-                            invisible="state not in ['approved']" />
+                            invisible="state not in ['approved'] or payment_structure in ['interest_free_loan'] " />
                     <button name="action_reset_to_draft" string="Reset to Draft"
                             type="object" class="btn-primary"
                             invisible="state in ['draft']" />
@@ -59,17 +60,18 @@
                             <field name="loan_type_id" />
                             <field name="interest_rate" />
                             <field name="amount_due" />
-                            <field name="fully_paid_date" readonly="state != 'fully_paid'" />
+                            <field name="payment_structure" />
                         </group>
                         <group>
                             <field name="applied_date" readonly="1" />
                             <field name="approved_date" readonly="1" />
-                            <field name="date_of_next_invoice" />
+                            <field name="date_of_next_invoice" invisible="payment_structure in ['interest_free_loan']" />
                             <field name="borrowed_date" />
+                            <field name="fully_paid_date" readonly="state != 'fully_paid'" />
                         </group>
                     </group>
                     <notebook>
-                        <page string="Invoicing" invisible="state not in ['approved']">
+                        <page string="Invoicing" invisible="payment_structure not in ['amortized_loan', 'interest_only_loan'] or state not in ['approved']">
                             <field name="borrower_invoice_ids" />
                         </page>
                         <page string="Other Charges">
